allow opening of files without an extension #3
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@10 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 
     First stab at autocompletition using Ctrl-P
+    Allow opening files without extensions (on non-ms-windows systems)
 
 v0.04 2008.08.08
 
