Testing if I can commit
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@30 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 
     First stab at autocompletition using Ctrl-P
     Allow opening files without extensions (on non-ms-windows systems)
+    Testing if I can commit
 
 v0.04 2008.08.08
 
