Created standalone separate Padre::Config class
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@56 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
     Replace YAML with YAML::Tiny (ADAMK)
     Moved bin/padre to script/padre (ADAMK)
     Moving all globals into a unified object tree (ADAMK)
+    Created standalone Padre::Config (ADAMK)
 
 v0.04 2008.08.08
 
