--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
+v0.02 2008.08.17
 
-v0.01 2009.08.03
+Follow the API changes of Padre 0.05
+
+v0.01 2008.08.03
 
 Initial, experimental version released.
 
