--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
     Add some "new file" templates
     Temporarily remove the toolbar
     Some fixes for Padre::Demo
+    update list of methods on save as well #54
 
 v0.05 2008.08.17
 
