stop crashing context help when no file is open #53
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@79 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
     Temporarily remove the toolbar
     Some fixes for Padre::Demo
     update list of methods on save as well #54 (vincent)
+    Change the list of subs on the right hand side to be sorted
 
 v0.05 2008.08.17
 
