Remember if we were maximized when closing, and return to the original state
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@120 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@
     Set Alt-S to jump to the subs list
     Deal with newlines in files
     Lots of refactoring (ADAMK)
+    Remember that application was maximized (ADAMK)
+    Better choice of default size (ADAMK)
 
 v0.05 2008.08.17
 
