Making 01-load.t ONLY test compilation.
Moved the rest of the test code to 02-new.t

git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@124 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -8,6 +8,8 @@
     Lots of refactoring (ADAMK)
     Remember that application was maximized (ADAMK)
     Better choice of default size (ADAMK)
+    Adding a separate compilation test script (ADAMK)
+    Adding a ORLite interface to the database Padre::DB (ADAMK)
 
 v0.05 2008.08.17
 
