working on Padre::Demo
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@127 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
     Add some "new file" templates
     Temporarily remove the toolbar
-    Some fixes for Padre::Demo
+    Change behavior of Padre::Demo, add wxer command line interface
+    Remove Demo::App
     Update list of methods on save as well #54 (vincent)
     Change the list of subs on the right hand side to be sorted
     Set Alt-S to jump to the subs list
