move the Alt-n calls to be menu items including the full filename
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@146 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -12,6 +12,8 @@
     Adding a separate compilation test script (ADAMK)
     Adding a ORLite interface to the database Padre::DB (ADAMK)
     Include authors tests for Perl critic and POD in xt/ directory
+    Make commenting out and uncommenting out atomic in the undo buffer
+    Replace string search by regex search
 
 v0.05 2008.08.17
 
