--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
     Allow the user to change the width ot TABs as they are displayed 
     Separate the code to show the preferences window to the Padre::Wx::Preferences module
     Separate code to Padre::Wx::Menu, Padre::Wx::Execute, Padre::Wx::Help
+    Allow spliting windows to see two parts of the same document
 
 v0.06 2008.08.28
 
