Add Zoom-reset menu options to change the zoom on all documents
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@170 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
     Separate the code to show the preferences window to the Padre::Wx::Preferences module
     Separate code to Padre::Wx::Menu, Padre::Wx::Execute, Padre::Wx::Help
     Allow spliting windows to see two parts of the same document
-    Add Zoom-in/Zoom-out menu options to change the zoom on all documents
+    Add Zoom-in/Zoom-out/Zoom-reset menu options to change the zoom on all documents
 
 v0.06 2008.08.28
 
