--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     Separate code to Padre::Wx::Menu, Padre::Wx::Execute, Padre::Wx::Help
     Allow spliting windows to see two parts of the same document
     Add Zoom-in/Zoom-out/Zoom-reset menu options to change the zoom on all documents
+    Allow the use of PAR files as plugins (TSEE)
 
 v0.06 2008.08.28
 
