point to the mailing list from META.yml
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@190 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-Padre
+Padre - Perl Application Development and Refactoring Environment
 
 Currently a simple editor for Perl written in Perl using WxWidgets
 
@@ -9,3 +9,8 @@ installation:
 Alien::WxWidgets
 Wx
 Padre
+
+For detailed installation look at 
+
+http://padre.perlide.org/wiki/Download
+
