add Ctrl-Shift-O to open file based on the current selection in the current window.
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@220 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+    Add Ctrl-Shift-O to open a file based on the selection in the current window.
+    Enable ack integration even though it is not nice yet but it is working
+    Use real Wx:AboutDialogInfo for the about box.
+    Hide method names (in the method window) when they don't start on the first column.
+    Add menu option to close all buffers.
+    Escape $ signs by default so they will not interpolate during search 
+
 v0.07 2008.09.04
 
     Allow the user to change the width ot TABs as they are displayed 
