--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v0.09
+
+    Move various relevant menu items into a "Window" menu (ADAMK)
+    Rename "Enable CallTip" to "Show Call Tips" for consistency (ADAMK)
+    Adding more menu seperators to improve the visual look (ADAMK)
+
 v0.08 2008.09.11
 
     Add Ctrl-Shift-O to open a file based on the selection in the current window.
