add debugging output to failed tests
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/projects/debugger@273 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+v0.03 2008.09.13
+    Add debug output for tests to better understand test failures.
+
 v0.02 2008.09.13
     Replace step by step_in
     Add methods step_out, step_over, get_value
