update the Changes file and the ->buffer method
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/projects/Debug-Client@293 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v0.04
+    Add more methods
+    Add more tests
+    Rename to Debug::Client
+    Remove the global $response variable and let users fetch the buffer using $dbg->buffer
+
 v0.03 2008.09.13
     Add debug output for tests to better understand test failures.
     More tests
