--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@ v0.09
     Experimental menu reflow closer to being usable (ADAMK)
     Split out Wx-related utility functions into Padre::Wx (ADAMK)
     Adding common platform-detection logic to Padre::Util (ADAMK(
+    If we start with a new file and then open another one,
+    implicitly close the unused new file (ADAMK)
 
 v0.08 2008.09.11
 
