Various changes to move event handlers unrelated to the MainWindow out of MainWindow
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@358 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ v0.09 2008.08.17
     Always show status bar on Win32, as removing it breaks (ADAMK)
     Added experimental Padre::Document::Perl (ADAMK)
     Added experimental PPI intergration (ADAMK)
-    Experimental menu reflow closer to being usable (ADAMK)
+    Experimental menu refresh closer to being usable (ADAMK)
     Split out Wx-related utility functions into Padre::Wx (ADAMK)
     Adding common platform-detection logic to Padre::Util (ADAMK(
     If we start with a new file and then open another one,
