add pasm and Perl6 syntax highlighting
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@359 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+    Improve the search tool (include backward search)
+    Allow keeping the search window open (or close it and use F3)
+	Shif-F3 to jump backwards
+    Add Search and Replace and global search and replace
+    Clean up the MainWindow module, move code to Document and Document::Perl
+    Implement an experimental Pasm and Perl 6 highlighting and calltip
+
 v0.09 2008.08.17
 
     Move various relevant menu items into a "Window" menu (ADAMK)
