--- a/Changes
+++ b/Changes
@@ -12,6 +12,10 @@ v0.11
     Moved the "recent files" internal state into the database (ADAMK)
     Removed index pointers unrelated to the IDE from Padre.pm (ADAMK)
     Transaction-wrap exiting to make it much much faster (ADAMK)
+    Adding shortcut methods for popup messages/errors (ADAMK)
+    Optimised away the non-Wx non-class Padre::Wx::Execute (ADAMK)
+    Created Padre::Wx::Dialog::LastText so we can have a dialog
+        box that defaults to whatever the last answer was. (ADAMK)
 
 v0.10 2008.09.22
 
