--- a/Changes
+++ b/Changes
@@ -5,6 +5,12 @@ v0.XX XXXX
     fix warning when closing Padre with no files open
     close lone unused document when opening a recent file (now works the same
         as file->open)
+    SplitWindow widgets are now used properly (ADAMK)
+    Show Output nows correctly hides away the output window when non-visible (ADAMK)
+    Refactored out output window to Padre::Wx::Output (ADAMK)
+    General refactoring pass over Padre::Wx (ADAMK)
+    Padre::Wx forces all the Wx::wxCONSTANT values to be populated,
+    so that we don't need all the use Wx qw{ wxCONSTANT } imports (ADAMK)
 
 v0.12 2008.10.23
 
