--- a/Changes
+++ b/Changes
@@ -12,6 +12,7 @@ v0.XX XXXX
     Padre::Wx forces all the Wx::wxCONSTANT values to be populated,
     so that we don't need all the use Wx qw{ wxCONSTANT } imports (ADAMK)
     Make it clear in the main window title if running from SVN checkout (ADAMK)
+    Add Padre::PluginBuilder for Padre plugins with extra build targets (SMUELLER)
 
 v0.12 2008.10.23
 
