--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changes for Padre. All changes by Gabor unless noted.
 
+    Make the add/remove Perl menu work without warnings. (ADAMK + SZABGAB)
+	Make brace matching (Ctrl-1) jump to the matching brace. (SZABGAB)
+
 v0.13 2008.10.26
 
     fix warning when closing Padre with no files open (BRICAS)
