--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-Changes for Padre. All changes by Gabor unless noted.
+Changes for Padre.
 
+    Skip the Test::Compile test if the module is not installed. (SZABGAB)
     Make the add/remove Perl menu work without warnings. (ADAMK + SZABGAB)
-	Make brace matching (Ctrl-1) jump to the matching brace. (SZABGAB)
+    Make brace matching (Ctrl-1) jump to the matching brace. (SZABGAB)
 
 v0.13 2008.10.26
 
@@ -13,23 +14,25 @@ v0.13 2008.10.26
     Refactored out output window to Padre::Wx::Output (ADAMK)
     General refactoring pass over Padre::Wx (ADAMK)
     Padre::Wx forces all the Wx::wxCONSTANT values to be populated,
-    so that we don't need all the use Wx qw{ wxCONSTANT } imports (ADAMK)
+        so that we don't need all the use Wx qw{ wxCONSTANT } imports (ADAMK)
     Make it clear in the main window title if running from SVN checkout (ADAMK)
     Add Padre::PluginBuilder for Padre plugins with extra build targets (SMUELLER)
-    Create dialog abstraction in Padre::Wx::Dialog.
-    Lots of refreshing related fixes.
-    Create Padre::Documents to return the current or any other document object.
-    Stop importing Wx directly in the Padre::Wx:: modules.
-    Compile all modules if Test::Compile is available during tests.
-    Save button on toolbar is working now when the current document needs saving.
+    Create dialog abstraction in Padre::Wx::Dialog. (SZABGAB)
+    Lots of refreshing related fixes. (SZABGAB)
+    Create Padre::Documents to return the current or any other document object. (SZABGAB)
+    Stop importing Wx directly in the Padre::Wx:: modules. (SZABGAB)
+    Compile all modules if Test::Compile is available during tests. (SZABGAB)
+    Save button on toolbar is working now when the current document needs saving. (SZABGAB)
     Use binmode :raw in order to help Windows when opening and writing files
-        fixing the bug that we used to change the newline types whem editing on Windows.
-    Run Script did not work bug fixed #76
-    chdir to directory to be executed with Run Script #69
+        fixing the bug that we used to change the newline types whem editing on Windows. (SZABGAB)
+    Run Script did not work bug fixed #76 (SZABGAB)
+    chdir to directory to be executed with Run Script #69 (SZABGAB)
 
 v0.12 2008.10.23
 
-    stupid bugs left in 0.11 reported by Brian Cassidy
+All changes by SZABGAB unless noted.
+
+    stupid bugs left in 0.11 reported by Brian Cassidy.
 
 v0.11 2008.10.23
 
@@ -58,18 +61,18 @@ v0.11 2008.10.23
 
 v0.10 2008.09.22
 
-    Improve the search tool (include backward search)
-    Allow keeping the search window open (or close it and use F3)
-	Shif-F3 to jump backwards
-    Add Search and Replace and global search and replace
-    Setup mapping of file extensions to mime-types and to color coding
-    Clean up the MainWindow module, move code to Document and Document::Perl
-    Implement an experimental Pasm, Pir and Perl 6 highlighting
-    Allow experimental code to allow the user to execute code within Padre
-    Report if file could not be saved and keep it in unsaved state (bug #74)
-    Separate the Padre::Install module from Build.PL
-    Set default mime-type of new files to be perl
-    Change mime-type when saving file to the appropriate new mime-type
+    Improve the search tool (include backward search).
+    Allow keeping the search window open (or close it and use F3).
+	Shift-F3 to jump backwards.
+    Add Search and Replace and global search and replace.
+    Setup mapping of file extensions to mime-types and to color coding.
+    Clean up the MainWindow module, move code to Document and Document::Perl.
+    Implement an experimental Pasm, Pir and Perl 6 highlighting.
+    Allow experimental code to allow the user to execute code within Padre.
+    Report if file could not be saved and keep it in unsaved state (bug #74).
+    Separate the Padre::Install module from Build.PL.
+    Set default mime-type of new files to be perl.
+    Change mime-type when saving file to the appropriate new mime-type.
 
 v0.09 2008.09.17
 
@@ -81,9 +84,9 @@ v0.09 2008.09.17
     Added experimental PPI intergration (ADAMK)
     Experimental menu refresh closer to being usable (ADAMK)
     Split out Wx-related utility functions into Padre::Wx (ADAMK)
-    Adding common platform-detection logic to Padre::Util (ADAMK(
+    Adding common platform-detection logic to Padre::Util (ADAMK)
     If we start with a new file and then open another one,
-    implicitly close the unused new file (ADAMK)
+        implicitly close the unused new file (ADAMK)
     Some dialog cleanups.
     Make sure we can build stand alon executable for Linux.
     Remove Ctrl-Shift-Z from redo as Ctrl-Y already works.
@@ -91,23 +94,23 @@ v0.09 2008.09.17
 v0.08 2008.09.11
 
     Add Ctrl-Shift-O to open a file based on the selection in the current window.
-    Enable ack integration even though it is not nice yet but it is working
+    Enable ack integration even though it is not nice yet but it is working.
     Use real Wx:AboutDialogInfo for the about box.
     Hide method names (in the method window) when they don't start on the first column.
     Add menu option to close all buffers.
     Escape $ signs by default so they will not interpolate during search.
     Open file now opens in the directory where the current file is.
-    Add Bookmarks
+    Add Bookmarks.
     Add toolbar with several icons. Tested on Windows as well.
     Add icon for the application.
     Enable/disable regex in search.
     Add menu option to convert line endings.
     Replace relative path with full path on the command line.
-    Implement basic CallTips and add menu option to enable/disable them
+    Implement basic CallTips and add menu option to enable/disable them.
 
 v0.07 2008.09.04
 
-    Allow the user to change the width ot TABs as they are displayed 
+    Allow the user to change the width ot TABs as they are displayed.
     Separate the code to show the preferences window to the Padre::Wx::Preferences module
     Separate code to Padre::Wx::Menu, Padre::Wx::Execute, Padre::Wx::Help
     Allow spliting windows to see two parts of the same document
@@ -147,18 +150,18 @@ v0.06 2008.08.28
 
 v0.05 2008.08.17
 
-    First stab at autocompletition using Ctrl-P (SZABGAB)
-    Allow opening files without extensions (on non-ms-windows systems) (SZABGAB)
-    Cleaning up to comply with perlcritic default settings (ADAMK)
-    Adding basic "project" support (ADAMK)
-    Adding Module::Inspector as prereq (ADAMK)
+    First stab at autocompletition using Ctrl-P. (SZABGAB)
+    Allow opening files without extensions (on non-ms-windows systems). (SZABGAB)
+    Cleaning up to comply with perlcritic default settings. (ADAMK)
+    Adding basic "project" support. (ADAMK)
+    Adding Module::Inspector as prereq. (ADAMK)
     Replace YAML with YAML::Tiny (ADAMK)
-    Moved bin/padre to script/padre (ADAMK)
-    Moving all globals into a unified object tree (ADAMK)
+    Moved bin/padre to script/padre. (ADAMK)
+    Moving all globals into a unified object tree. (ADAMK)
     Created standalone Padre::Config (ADAMK)
-    Show the filetpe in the status bar (SZABGAB)
-    remove Devel::PerlySense as prereq for now (SZABGAB)
-    List functions of the current file on the right panel (SZABGAB)
+    Show the filetpe in the status bar. (SZABGAB)
+    remove Devel::PerlySense as prereq for now. (SZABGAB)
+    List functions of the current file on the right panel. (SZABGAB)
     Syntax highlighting of more file types (PATSPAM)
 
 v0.04 2008.08.08
