--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Changes for Padre.
     Skip the Test::Compile test if the module is not installed. (SZABGAB)
     Make the add/remove Perl menu work without warnings. (ADAMK + SZABGAB)
     Make brace matching (Ctrl-1) jump to the matching brace. (SZABGAB)
+	Allow preference to use tabs (or spaces) when pressing TAB. (SZABGAB)
 
 v0.13 2008.10.26
 
