Add "Close all but current document"
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@557 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Changes for Padre.
 	Start using File::Which to locate the perl interpreter
        (if padre is running from a par archive). (SZABGAB)
     Fix the Split Window menu option to really work. (SZABGAB)
+    Adding "Close All but Current Document" menu option. (SZABGAB)
 
 v0.14 2008.10.27
 
