--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Changes for Padre.
        (if padre is running from a par archive). (SZABGAB)
     Fix the Split Window menu option to really work. (SZABGAB)
     Adding "Close All but Current Document" menu option. (SZABGAB)
+	Add autoindentation. (SZABGAB)
 
 v0.14 2008.10.27
 
