--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Changes for Padre.
     Fix the Split Window menu option to really work. (SZABGAB)
     Adding "Close All but Current Document" menu option. (SZABGAB)
 	Add autoindentation. (SZABGAB)
+	Set focus on windows. (SZABGAB)
 
 v0.14 2008.10.27
 
