--- a/Changes
+++ b/Changes
@@ -7,8 +7,9 @@ Changes for Padre.
        (if padre is running from a par archive). (SZABGAB)
     Fix the Split Window menu option to really work. (SZABGAB)
     Adding "Close All but Current Document" menu option. (SZABGAB)
-	Add autoindentation. (SZABGAB)
-	Set focus on windows. (SZABGAB)
+    Add autoindentation. (SZABGAB)
+    Set focus on windows. (SZABGAB)
+    Before saving, check if file has changed on disk. (SZABGAB)
 
 v0.14 2008.10.27
 
