new menu option: reload file
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@570 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Changes for Padre.
     Add autoindentation. (SZABGAB)
     Set focus on windows. (SZABGAB)
     Before saving, check if file has changed on disk. (SZABGAB)
+    New menu option: "Reload file". (SZABGAB)
 
 v0.14 2008.10.27
 
