move style definition to external yaml file
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@579 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@ Changes for Padre.
     Set focus on windows. (SZABGAB)
     Before saving, check if file has changed on disk. (SZABGAB)
     New menu option: "Reload file". (SZABGAB)
+    Move style definition to external yaml file. (SZABGAB)
 
 v0.14 2008.10.27
 
