--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@ Changes for Padre.
     Reorganize Menus (make the Perl menu really only perl specific). (SZABGAB)
     Allow the execution of PASM files using parrot if PARROT_PATH
         is defined. (SZABGAB)
+    Load Embed::Parrot if it is available. (SZABGAB)
 
 v0.14 2008.10.27
 
