allow the execution of Perl6 code using rakudo
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@599 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -18,6 +18,7 @@ Changes for Padre.
         is defined. (SZABGAB)
     Load Parrot::Embed if it is available. (SZABGAB)
     Add Padre::Plugin::Parrot to show how to use pir for plugin writing. (SZABGAB)
+    Allow execution of Perl 6 code using Rakudo. (SZABGAB)
 
 v0.14 2008.10.27
 
