--- a/share/languages/perl5/perl5.yml
+++ b/share/languages/perl5/perl5.yml
@@ -1,4 +1,8 @@
 ---
+# Copyright 2008 Gabor Szabo.
+# LICENSE
+# This program is free software; you can redistribute it and/or
+# modify it under the same terms as Perl 5 itself.
 abs:
  cmd: (NUMBER)
  exp: The absolute value of NUMBER.
@@ -524,3 +528,4 @@ warn:
 write:
  cmd: EXPR
  exp: Writes a formatted record (possibly multi-line) to the specified FILEHANDLE.
+
