--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+0.15 2008.11.02
+
     Don't let opening file that is already open. (SZABGAB)
     Start UTF-8 support. (SZABGAB)
 	Switch to File::ShareDir::PAR (SMUELLER)
@@ -20,6 +22,9 @@ Changes for Padre.
     Add Padre::Plugin::Parrot to show how to use pir for plugin writing. (SZABGAB)
     Allow execution of Perl 6 code using Rakudo. (SZABGAB)
     Add copyright/license to all the .pm files as per Debian request. (SZABGAB)
+    Ctrl-T is the default new file hot-key just as in Firefox. (ADAMK)
+    Dialog cleanups. (SMUELLER, ADAMK, SZABGAB)
+    Replace the toolbar icons with icons from the Tango project. (SZABGAB)
 
 v0.14 2008.10.27
 
