--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Padre.
 
+    Fix New on the Toolbar (SZABGAB)
+
 0.15 2008.11.02
 
     Don't let opening file that is already open. (SZABGAB)
