--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Padre.
 
     Fix New on the Toolbar (SZABGAB)
+    Add Diff menu item to show changes in file. (SZABGAB)
 
 0.15 2008.11.02
 
