changes file update
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@701 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Changes for Padre.
 
     Fix New on the Toolbar (SZABGAB)
     Add Diff menu item to show changes in file. (SZABGAB)
+    Change windowing system to AUI solving several requests: (SZABGAB)
+       Split view
+       Tab reordering
+       Tab close button
+    Localization and German translation. (Heiko Jansen)
 
 0.15 2008.11.02
 
