--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Changes for Padre.
        Tab reordering
        Tab close button
     Localization and German translation. (Heiko Jansen)
+    Move the content of Padre::Wx::Dialog to Wx::Perl::Dialog 0.02 (SZABGAB)
 
 0.15 2008.11.02
 
