--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Changes for Padre.
        Tab close button
     Localization and German translation. (Heiko Jansen)
     Move the content of Padre::Wx::Dialog to Wx::Perl::Dialog 0.02 (SZABGAB)
+    Chnage back the new-file hot-key to be Ctr-N again. (SZABGAB)
 
 0.15 2008.11.02
 
