--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Changes for Padre.
     Move the content of Padre::Wx::Dialog to Wx::Perl::Dialog 0.02 (SZABGAB)
     Chanage back the new-file hot-key to be Ctr-N again. (SZABGAB)
     Add experimental PPI based Perl5 syntax highlighting (FAYLAND, SZABGAB)
+    Save cursor position between runs of Padre. (FAYLAND)
 
 0.15 2008.11.02
 
