--- a/Changes
+++ b/Changes
@@ -14,6 +14,7 @@ Changes for Padre.
     Tab/space conversion menu items. (FAYLAND)
     Upper/Lower case comversion menu items. (FAYLAND)
     New icons on the toolbar adding undo/redo/cut/cop/paste/select all. (HJANSEN)
+    Move Parrot plugin to separate distribution. (SZABGAB)
 
 0.15 2008.11.02
 
