--- a/Changes
+++ b/Changes
@@ -10,15 +10,15 @@ Changes for Padre.
        Tab close button
     Localization and German translation. (HJANSEN)
     Move the content of Padre::Wx::Dialog to Wx::Perl::Dialog 0.02 (SZABGAB)
-    Chanage back the new-file hot-key to be Ctr-N again. (SZABGAB)
+    Change back the new-file hot-key to be Ctr-N again. (SZABGAB)
     Add experimental PPI based Perl5 syntax highlighting (FAYLAND, SZABGAB)
     Save cursor position between runs of Padre. (FAYLAND)
     Tab/space conversion menu items. (FAYLAND)
-    Upper/Lower case comversion menu items. (FAYLAND)
+    Upper/Lower case conversion menu items. (FAYLAND)
     New icons on the toolbar adding undo/redo/cut/cop/paste/select all. (HJANSEN)
     Also put cut/copy/paste/select all in the edit menu and in the right click menu. (HJANSEN)
     Move Parrot plugin to separate distribution. (SZABGAB)
-    Enable swictching between German and English. (SZABGAB)
+    Enable switching between German and English. (SZABGAB)
 
 0.15 2008.11.02
 
