fix the saving of the new autoindentation preference implement the three levels of autoindentation
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@873 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for Padre.
 
+    Fix the failing plugin manager test. (SZABGAB)
+    Add configuration option to the autoindentation (no, same_level, deep). (SZABGAB)
+    Temporarily stop using File::ShareDir::PAR. (SZABGAB)
+
 0.16 2008.11.09
 
     Fix New on the Toolbar (SZABGAB)
