fix bug #43: Open multiple files from OS "open file" dialog
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@929 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Changes for Padre.
     Fix the failing plugin manager test. (SZABGAB)
     Add configuration option to the autoindentation (no, same_level, deep). (SZABGAB)
     Temporarily stop using File::ShareDir::PAR. (SZABGAB)
+    Allow opening multiple files at once (JQUELIN)
 
 0.16 2008.11.09
 
