--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Changes for Padre.
     Temporarily stop using File::ShareDir::PAR. (SZABGAB)
     Allow opening multiple files at once (JQUELIN)
     Add Padre::Plugin::MY and set it to be a prefered plugin. (SZABGAB)
+    Join lines with Ctrl+J (JQUELIN)
 
 0.16 2008.11.09
 
