--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Changes for Padre.
     Allow opening multiple files at once (JQUELIN)
     Add Padre::Plugin::MY and set it to be a prefered plugin. (SZABGAB)
     Join lines with Ctrl+J (JQUELIN)
+    Full screen view (JQUELIN)
 
 0.16 2008.11.09
 
