fix ticket #132: hide/show white spaces and tabs
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@961 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@ Changes for Padre.
     Add Padre::Plugin::MY and set it to be a prefered plugin. (SZABGAB)
     Join lines with Ctrl+J (JQUELIN)
     Full screen view (JQUELIN)
+    Hide/show white spaces and tabs (JQUELIN)
 
 0.16 2008.11.09
 
