--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ Changes for Padre.
     Join lines with Ctrl+J (JQUELIN)
     Full screen view (JQUELIN)
     Hide/show white spaces and tabs (JQUELIN)
+    Check minimum App::Ack version (JQUELIN)
 
 0.16 2008.11.09
 
