--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@ Changes for Padre.
     Full screen view (JQUELIN)
     Hide/show white spaces and tabs (JQUELIN)
     Check minimum App::Ack version (JQUELIN)
+    Selection markers to ease selection (JQUELIN)
 
 0.16 2008.11.09
 
