code folding has been fixed since r860 by hjansen++
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@998 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Changes for Padre.
 
+    Code folding (HJANSEN)
     Word Wrap and "Default word wrap on for each file" in Preferences (FAYLAND)
     Show/Hide Output or Functions (FAYLAND)
     Fix the failing plugin manager test. (SZABGAB)
